# easy-cast

./: .Cargo.toml.kate-swp  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: impl_basic.rs  impl_float.rs  impl_int.rs  impl_num.rs  impl_ops.rs  impl_range.rs  lib.rs  traits.rs
tests/: array_conv.rs  conv_approx.rs  core-types.rs  core_ops_types.rs  core_range_types.rs  error.rs  feature_flags.rs  float_approx.rs  float_conv.rs  int_conv.rs  int_to_float.rs  tests.rs  tuple_conv.rs
tests/common/: mod.rs
