[package]
name = "easy-cast"
version = "0.4.3"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "Type conversions which are expected to succeed"
readme = "README.md"
documentation = "https://docs.rs/easy-cast/"
keywords = ["cast", "into", "from", "conversion"]
repository = "https://github.com/kas-gui/easy-cast"

[features]
default = ["std"]

# Without std, float conversions are disabled (unless libm is used)
std = []

# Note: assertions are always used in debug builds; these only affect release builds:

# Always use all assertions
always_assert = ["assert_float", "assert_int"]

# Always assert when converting from floating-point types
assert_float = []

# Always assert when converting from integer types
assert_int = []

[dependencies.libm]
# libm may be used instead of std to provide float conversions
version = "0.2.1"
optional = true
