[package]
name = "easy-cast"
version = "0.5.3"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "Type conversions which are expected to succeed"
readme = "README.md"
documentation = "https://docs.rs/easy-cast/"
keywords = ["cast", "into", "from", "conversion"]
repository = "https://github.com/kas-gui/easy-cast"
rust-version = "1.60.0"

[package.metadata.docs.rs]
features = []
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --open

[features]
default = ["std"]

# Without std, float conversions are disabled (unless libm is used)
std = []

# libm may be used instead of std to provide float conversions
libm = ["dep:libm"]

# Note: assertions are always used in debug builds; these only affect release builds:

# Always use all assertions
always_assert = ["assert_float", "assert_int", "assert_digits"]

# Assert float -> any conversions do not exceed range of target type
assert_float = []

# Always int -> int conversions do not exceed range of target type
assert_int = []

# Assert int -> float conversion does not lose accuracy
assert_digits = []

[dependencies.libm]
version = "0.2.1"
optional = true
